2010-05-28  Helmut Eller  <heller@common-lisp.net>

	* slime.el (define-slime-contrib): Use destructuring-bind.

2010-05-28  Helmut Eller  <heller@common-lisp.net>

	Move some var-defs before first use.

	* slime.el (slime-show-xref-buffer, slime-read-connection)
	(slime-thread-index-to-id):

2010-05-28  Helmut Eller  <heller@common-lisp.net>

	Move wacky parsing code to contrib.

	* slime.el (slime-extract-context, slime-parse-context)
	(slime-in-expression-p, slime-pattern-path)
	(slime-beginning-of-list, slime-end-of-list)
	(slime-parse-toplevel-form, slime-arglist-specializers)
	(slime-definition-at-point, slime-current-parser-state): Moved to
	contrib/slime-parse.el
	(slime-inspect-definition, slime-disassemble-definition): Moved to
	contrib/slime-fancy-inspector.el

2010-05-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([test] interactive-eval): Fix test.

2010-05-27  Helmut Eller  <heller@common-lisp.net>

	* swank-ccl.lisp (socket-fd): Implement backend function.

2010-05-27  Helmut Eller  <heller@common-lisp.net>

	Clean up some of the confusion regarding *sldb-quit-restart*.

	* swank.lisp (top-level-restart-p, *toplevel-restart-available*)
	(coerce-restart): Deleted.
	(with-top-level-restart, simple-repl): Simplify.

2010-05-26  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (swank-error): Unrename from swank-protocol-error.

2010-05-26  Helmut Eller  <heller@common-lisp.net>

	* swank-cmucl.lisp (parse-gdb-line-info): Try working dir first.

2010-05-26  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-defun-if-undefined): Renamed from
	slime-DEFUN-if-undefined. No need to yell.

2010-05-26  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-compile-file): Only send non-nil keyword args.
	(slime-hack-quotes): New function.

2010-05-18  Stas Boukarev  <stassats@gmail.com>

	* slime.el (sldb-insert-condition): Don't create a mouse tooltip
	for long error message, tooltip shows the same text and doesn't
	add any value.